--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
       <div id="div_1">
-        <h1>Social Media <span>10x</span> Faster with AI</h1>
+        <h1>Social Media <span>10x</span> <i>Faster</i> with AI</h1>
         <img src="./assets/images/illustration-five-stars.webp" alt="5-Stars">
         <p>Over 4,000 5-star reviews</p>
       </div>
