--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       
         <div id="div_5">
           <img src="./assets/images/illustration-grow-followers.webp" alt="Grow Followers">
-          <h1>Grow followers with non-stop content.</h1></div>
+          <h2>Grow followers with non-stop content.</h2></div>
 
         <div id="div_6">
-          <h2>>56%<span>faster audience growth</span></h2>
+          <h1>>56%</h1><h2>faster audience growth</h2>
           <img src="./assets/images/illustration-audience-growth.webp" alt="Audience Growth"></div>
       
         <div id="div_7">
-          <h2>Create and schedule content<span>quicker.</span></h2>
+          <h2>Create and schedule content <i><span id="span_2">quicker.</span></i></h2>
           <img src="./assets/images/illustration-create-post.webp" alt="Create Post"></div>
 
         <div id="div_8">
@@ -53,7 +53,7 @@
 <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://lora-oliv.com/">Lora Oliv</a>.
     </div>
 </footer>
 </html>
