--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@
         <img src="./assets/images/illustration-consistent-schedule.webp" alt="Schedule Icon">
       </div>
 
-       <div id="div_4">
-          <h2>Schedule to social media.</h2>
-          <img src="./assets/images/illustration-schedule-posts.webp" alt="Schedule Posts">
-          <p>Optimize post timings to publish content at the perfect time for your audience.</p></div>
+      <div id="div_4">
+        <h2>Schedule to social media.</h2>
+        <img src="./assets/images/illustration-schedule-posts.webp" alt="Schedule Posts">
+        <p>Optimize post timings to publish content at the perfect time for your audience.</p></div>
       
-        <div id="div_5">
-          <img src="./assets/images/illustration-grow-followers.webp" alt="Grow Followers">
-          <h2>Grow followers with non-stop content.</h2></div>
+      <div id="div_5">
+        <img src="./assets/images/illustration-grow-followers.webp" alt="Grow Followers">
+        <h2>Grow followers with non-stop content.</h2></div>
 
-        <div id="div_6">
-          <h1>>56%</h1><h2>faster audience growth</h2>
-          <img src="./assets/images/illustration-audience-growth.webp" alt="Audience Growth"></div>
+      <div id="div_6">
+         <h1>>56%</h1><h2>faster audience growth</h2>
+        <img src="./assets/images/illustration-audience-growth.webp" alt="Audience Growth"></div>
       
-        <div id="div_7">
-          <h2>Create and schedule content <i><span id="span_2">quicker.</span></i></h2>
-          <img src="./assets/images/illustration-create-post.webp" alt="Create Post"></div>
+      <div id="div_7">
+        <h2>Create and schedule content <i><span id="span_2">quicker.</span></i></h2>
+        <img src="./assets/images/illustration-create-post.webp" alt="Create Post"></div>
 
-        <div id="div_8">
-          <h2>Write your content using AI.</h2>
-          <img src="./assets/images/illustration-ai-content.webp" alt="AI Content"></div>
+      <div id="div_8">
+        <h2>Write your content using AI.</h2>
+        <img src="./assets/images/illustration-ai-content.webp" alt="AI Content"></div>
 
-      </div>
+    </div>
   </body>
 
 <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-      Coded by <a href="https://lora-oliv.com/">Lora Oliv</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://lora-oliv.com/" target="_blank">Lora Oliv</a>.
     </div>
 </footer>
 </html>
