--- a/index.html
+++ b/index.html
@@ -10,40 +10,40 @@
 
 <body>
   <div class="container">
-      <div id="div_1">
+      <div>
         <h1>Social Media <span>10x</span> <i>Faster</i> with AI</h1>
         <img src="./assets/images/illustration-five-stars.webp" alt="5-Stars">
         <p>Over 4,000 5-star reviews</p>
       </div>
 
-      <div id="div_2">
+      <div>
         <img src="./assets/images/illustration-multiple-platforms.webp" alt="Multiple Platforms">
         <h2>Manage multiple accounts and platforms. </h2>
       </div>
 
-      <div id="div_3">
+      <div>
         <h2>Maintain a consistent posting schedule.</h2>
         <img src="./assets/images/illustration-consistent-schedule.webp" alt="Schedule Icon">
       </div>
 
-      <div id="div_4">
+      <div>
         <h2>Schedule to social media.</h2>
         <img src="./assets/images/illustration-schedule-posts.webp" alt="Schedule Posts">
         <p>Optimize post timings to publish content at the perfect time for your audience.</p></div>
       
-      <div id="div_5">
+      <div>
         <img src="./assets/images/illustration-grow-followers.webp" alt="Grow Followers">
         <h2>Grow followers with non-stop content.</h2></div>
 
-      <div id="div_6">
+      <div>
          <h1>>56%</h1><h2>faster audience growth</h2>
         <img src="./assets/images/illustration-audience-growth.webp" alt="Audience Growth"></div>
       
-      <div id="div_7">
+      <div>
         <h2>Create and schedule content <i><span id="span_2">quicker.</span></i></h2>
         <img src="./assets/images/illustration-create-post.webp" alt="Create Post"></div>
 
-      <div id="div_8">
+      <div>
         <h2>Write your content using AI.</h2>
         <img src="./assets/images/illustration-ai-content.webp" alt="AI Content"></div>
 
